# fire

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  commonincludes.hpp  config  core.cpp  glx.cpp  install.sh  main.cpp  opengl.cpp  window.cpp  window.hpp  winstack.cpp
fcm/: MANIFEST  README  fcm  setup.py
fcm/fireconf/: config.py  fire.py  widgets.py
fsm/: config.py  main.py  widgets.py
gui/: __init__.py  config.py  gui.py
include/: commonincludes.hpp  config.hpp  core.hpp  glx.hpp  opengl.hpp  plugin.hpp  window.hpp  winstack.hpp  wm.hpp
plugins/: CMakeLists.txt  Makefile  animate.cpp  cube.cpp  expo.cpp  grid.cpp  move.cpp  move.d  move.hpp  resize.cpp  switcher.cpp  vswitch.cpp
plugins/animate/: CMakeLists.txt  animate.cpp  animate.hpp  fade.cpp  fade.hpp  fire.cpp  fire.hpp  particle.cpp  particle.hpp
plugins/animate/shaders/: compute.glsl  fire_compute.glsl  frag.glsl  vertex.glsl
plugins/animate/shaders/bg/: frag.glsl  vertex.glsl
plugins/animate/shaders/pt/: frag.glsl  vertex.glsl
plugins/cube/: CMakeLists.txt  cube.cpp
plugins/cube/shaders/: geom.glsl  tes.glsl  vertex.glsl
plugins/cube/shaders_3.3/: frag.glsl  vertex.glsl
plugins/cube_shaders/: frag.glsl  geom.glsl  tcs.glsl  tes.glsl  vertex.glsl
plugins/single_plugins/: CMakeLists.txt  animate.cpp  command.cpp  expo.cpp  grid.cpp  move.cpp  resize.cpp  switcher.cpp  vswitch.cpp
shaders/: frag.glsl  geom.glsl  tcs.glsl  tes.glsl  vertex.glsl
src/: .gitignore  Makefile  animate.cpp  commonincludes.hpp  config.cpp  core.cpp  core.hpp  glx.cpp  glx.hpp  grid.cpp  jpeg.hpp  main.cpp  movres.cpp  opengl.cpp  opengl.hpp  plugin.cpp  plugin.hpp  switcher.cpp  view.cpp  view.hpp  viewexpo.cpp  window.cpp  window.hpp  winstack.cpp  winstack.hpp  wm.cpp
src/session/: dbus.cpp  dbus.hpp  fd.cpp  fd.hpp  logind.cpp  logind.hpp  tty.cpp  tty.hpp  udev.cpp  udev.hpp
